--- a/templates/annonceur/index.html.twig
+++ b/templates/annonceur/index.html.twig
@@ -15,7 +15,7 @@
 					<div class="card-body">
 						<h5 class="card-title">Annonce 1</h5>
 						<p class="card-text">Chien 1</p>
-						<a href="#" class="btn btn-primary">Voir Annonce</a>
+						<a href="#" class="btn btn-dark-green">Voir Annonce</a>
 					</div>
 				</div>
 			</div>
@@ -25,7 +25,7 @@
 					<div class="card-body">
 						<h5 class="card-title">Annonce 2</h5>
 						<p class="card-text">Chien 2</p>
-						<a href="#" class="btn btn-primary">Voir Annonce</a>
+						<a href="#" class="btn btn-dark-green">Voir Annonce</a>
 					</div>
 				</div>
 			</div>
@@ -35,7 +35,7 @@
 					<div class="card-body">
 						<h5 class="card-title">Annonce 3</h5>
 						<p class="card-text">Chien 3</p>
-						<a href="#" class="btn btn-primary">Voir Annonce</a>
+						<a href="#" class="btn btn-dark-green">Voir Annonce</a>
 					</div>
 				</div>
 			</div>
@@ -46,7 +46,7 @@
 						<h5 class="card-title">Ajouter Annonce</h5>
 						<p class="card-text">
 							Ajouter une annonce.</p>
-						<a href="#" class="btn btn-primary">Créer Annonce</a>
+						<a href="#" class="btn btn-dark-green">Créer Annonce</a>
 					</div>
 				</div>
 			</div>
@@ -72,10 +72,10 @@
 						<td>Mark</td>
 						<td>Oui</td>
 						<td>
-							<button type="button" class="btn btn-success">Repondre</button>
+							<button type="button" class="btn btn-dark-green">Repondre</button>
 						</td>
 						<td>
-							<button type="button" class="btn btn-danger">Supprimer</button>
+							<button type="button" class="btn btn-dark-green">Supprimer</button>
 						</td>
 					</tr>
 					<tr>
@@ -83,10 +83,10 @@
 						<td>Jacob</td>
 						<td>Non</td>
 						<td>
-							<button type="button" class="btn btn-success">Repondre</button>
+							<button type="button" class="btn btn-dark-green">Repondre</button>
 						</td>
 						<td>
-							<button type="button" class="btn btn-danger">Supprimer</button>
+							<button type="button" class="btn btn-dark-green">Supprimer</button>
 						</td>
 					</tr>
 					<tr>
@@ -94,10 +94,10 @@
 						<td>Larry</td>
 						<td>Oui</td>
 						<td>
-							<button type="button" class="btn btn-success">Repondre</button>
+							<button type="button" class="btn btn-dark-green">Repondre</button>
 						</td>
 						<td>
-							<button type="button" class="btn btn-danger">Supprimer</button>
+							<button type="button" class="btn btn-dark-green">Supprimer</button>
 						</td>
 					</tr>
 					<tr>
@@ -105,10 +105,10 @@
 						<td>Patrick</td>
 						<td>Non</td>
 						<td>
-							<button type="button" class="btn btn-success">Repondre</button>
+							<button type="button" class="btn btn-dark-green">Repondre</button>
 						</td>
 						<td>
-							<button type="button" class="btn btn-danger">Supprimer</button>
+							<button type="button" class="btn btn-dark-green">Supprimer</button>
 						</td>
 					</tr>
 					<tr>
@@ -116,10 +116,10 @@
 						<td>Antoine</td>
 						<td>Peut etre</td>
 						<td>
-							<button type="button" class="btn btn-success">Repondre</button>
+							<button type="button" class="btn btn-dark-green">Repondre</button>
 						</td>
 						<td>
-							<button type="button" class="btn btn-danger">Supprimer</button>
+							<button type="button" class="btn btn-dark-green">Supprimer</button>
 						</td>
 					</tr>
 				</tbody>
