--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -48,7 +48,7 @@
 					</nav>
 					<h1 class="text-center my-5">
 						<i class="fas fa-paw"></i>
-						{{ title }}</h1>
+						Dog Corner</h1>
 
 				{% endblock %}
 			</header>
