--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,6 +17,8 @@
 		{% endblock %}
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 		<script src="https://kit.fontawesome.com/35ec662076.js" crossorigin="anonymous" defer></script>
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous" defer></script>
+
 
 		{% block javascripts %}
 			{#{{ encore_entry_script_tags('app') }}#}
