--- a/templates/list/index.html.twig
+++ b/templates/list/index.html.twig
@@ -18,7 +18,7 @@
 						<div class="card-body">
 							<h5 class="card-title">{{annonce.titre}}</h5>
 							<p class="card-text">card title and make up the bulk of the card's content.</p>
-							<a href="http://127.0.0.1:8001/detailAnnonce" class="btn btn-dark-green">Voir plus</a>
+							<a href="detailAnnonce" class="btn btn-dark-green">Voir plus</a>
 						</div>
 					</div>
 				</div>
