--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,7 +4,8 @@
 {% endblock %}
 
 {% block body %}
-	<form method="post">
+
+	<form method="post" class="mx-auto col-6 shadow p-5 rounded">
 		{% if error %}
 			<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 		{% endif %}
@@ -18,27 +19,31 @@
 		{% endif %}
 
 		<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-		<label for="inputEmail">Email</label>
-		<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-		<label for="inputPassword">Password</label>
-		<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+		<div class="mb-3">
+			<label for="inputEmail">Email</label>
+			<input class="form-control" type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+		</div>
+		<div class="mb-3">
+			<label for="inputPassword">Password</label>
+			<input class="form-control" type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+			<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+		</div>
 
-		<input
-		type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
 		{#
-						    Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-						    See https://symfony.com/doc/current/security/remember_me.html
-						
-						    <div class="checkbox mb-3">
-						        <label>
-						            <input type="checkbox" name="_remember_me"> Remember me
-						        </label>
-						    </div>
-						#}
+																								        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+																								        See https://symfony.com/doc/current/security/remember_me.html
+																								
+																								        <div class="checkbox mb-3">
+																								            <label>
+																								                <input type="checkbox" name="_remember_me"> Remember me
+																								            </label>
+																								        </div>
+																								    #}
 
-		<button class="btn btn-lg btn-primary" type="submit">
-			Sign in
+		<button class="btn btn-lg btn-dark-green" type="submit">
+			Connexion
 		</button>
 	</form>
+
 {% endblock %}
