--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,11 +40,11 @@
 								<a class="nav-link" href="list">Tous les Chiens</a>
 								<a class="nav-link" href="contact">Contact</a>
 								{% if is_granted('ROLE_ANNONCEUR') %}
-									<a href="annonceur" class=" nav-link" aria-current="page">Mes annonces
+									<a href="annonceur" class="nav-link" aria-current="page">Mes annonces
 
 									</a>
 									<div class="mx-5 start-end">
-										<a href="annonce-formulaire" class=" btn btn-success active" aria-current="page">Créer une annonce
+										<a href="annonce-formulaire" class=" btn add-btn " aria-current="page">Créer une annonce
 											<i class="fas fa-plus"></i>
 										</a>
 									</div>
@@ -52,13 +52,13 @@
 
 
 							</div>
-							<div class="nav-bar">
+							<div class="navbar-nav">
 								<div class="align-top d-flex">
-									<span class="me-5"></span>
+
 									<div class="text-center">
 										{% if not app.user %}
 											<a href="{{path('app_login')}}" class="p-0 mx-2 nav-link">
-												<i class="fas fa-user"></i><br>S 'identifier
+												<i class="fas fa-user"></i><br><span class="link-span">S 'identifier</span>
 											</a>
 										{% else %}
 											<a href="{{path('app_logout')}}" class="p-0 nav-link">
