--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -19,7 +19,7 @@
 {% block body %}
 
 	<h2 class="text-center">Dernier chiens ajoutés</h2>
-	<section class="row py-3 mb-5">
+	<section id="last-dog" class="row py-3 mb-5">
 		{% for key, annonce in annonces %}
 			<div class=" px-auto col-3 py-5">
 				<div class="card shadow" style="width: 25rem;">
@@ -41,32 +41,26 @@
 
 	</section>
 	<hr>
-	<section class="py-5">
+	<section id="partenaires" class="py-5">
 		<h2 class="text-center mb-5">Nos partenaires eleveurs et associations</h2>
-		<div class="row mx-auto">
+		<div class="row mx-auto ">
 			{% for key, annonce in annonces %}
-				<div class="card my-3 ">
-					<div class="row g-0">
-						<div class="col-md-4">
-							{% for dog in annonce.dogs %}
-								{% for image in dog.images %}
-									<img src="{{ asset(image.urlImage) }}" class="img-fluid rounded-start" alt="...">
-								{% endfor %}
-							{% endfor %}
-						</div>
-						<div class="col-md-8">
-							<div class="card-body">
-								<h5 class="card-title">Card title</h5>
-								<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-								<p class="card-text">
-									<small class="text-muted">Last updated 3 mins ago</small>
-								</p>
-							</div>
-						</div>
+				<div class="col-3 p-0 ms-4 mb-2 card bg-dark text-white">
+					{% for dog in annonce.dogs %}
+						{% for image in dog.images %}
+							<img src="{{ asset(image.urlImage) }}" class="card-img" alt="...">
+						{% endfor %}
+					{% endfor %}
+					<div class="card-img-overlay">
+						<h5 class="card-title">Card title</h5>
+						<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+						<p class="card-text">Last updated 3 mins ago</p>
 					</div>
 				</div>
 			{% endfor %}
 		</div>
+
+
 	</section>
 
 
