22-Creation de la page contact

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -78,8 +78,7 @@
 				{% endblock %}
 			</header>
 		{% endblock %}
-		<main class="container mx-auto py-5"> {% block body %}{% endblock %}
-			</main>
-		</body>
-	</html>
-</body></html>
+
+		{% block body %}{% endblock %}
+	</body>
+</html>
