--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,7 +38,7 @@
 							<div class="navbar-nav">
 								<a class="nav-link" aria-current="page" href="{{path('home_index')}}">Accueil</a>
 								<a class="nav-link" href="{{path('list')}}">Tous les Chiens</a>
-								<a class="nav-link" href="#">Contact</a>
+								<a class="nav-link" href="{{path('contact')}}">Contact</a>
 								{% if is_granted('ROLE_ANNONCEUR') %}
 									<a href="annonceur" class="nav-link" aria-current="page">Mes annonces
 
