--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -31,7 +31,7 @@
 					<div class="card-body">
 						<h5 class="card-title">{{annonce.titre}}</h5>
 						<p class="card-text">card title and make up the bulk of the card's content.</p>
-						<a href="detailAnnonce" class="btn btn-dark-green">Voir plus</a>
+						<a href="{{ path('detailAnnonce', {id: annonce.id}) }}" class="btn btn-dark-green">Voir plus</a>
 					</div>
 				</div>
 			</div>
