--- a/templates/list/index.html.twig
+++ b/templates/list/index.html.twig
@@ -12,7 +12,7 @@
 					<div class="card shadow" style="width: 25rem;">
 						{% for dog in annonce.dogs %}
 							{% for image in dog.images %}
-								<img src="{{ asset(image.urlImage) }}" class="card-img-top" alt="...">
+								<img src="{{ vich_uploader_asset(annonce.firstImage)}}" class="card-img-top" alt="...">
 							{% endfor %}
 						{% endfor %}
 						<div class="card-body">
